-- =====================================================
--  LAYER 1: RAW — 크롤링 원본 (가공 없음)
-- =====================================================
USE DATABASE COMPUTER_PRICE;
USE SCHEMA RAW;

CREATE TABLE IF NOT EXISTS RAW_CRAWLED_PRICES (
    ID              NUMBER AUTOINCREMENT PRIMARY KEY,
    SITE            VARCHAR(50)   NOT NULL,
    CATEGORY        VARCHAR(100)  NOT NULL,
    PRODUCT_NAME    VARCHAR(2000) NOT NULL,
    PRICE_TEXT      VARCHAR(100)  NOT NULL,
    BRAND           VARCHAR(200),
    URL             VARCHAR(4000) NOT NULL,
    STOCK_STATUS    VARCHAR(100),
    IS_PROCESSED    BOOLEAN       NOT NULL DEFAULT FALSE,
    PROCESSED_AT    TIMESTAMP_TZ,
    CRAWLED_AT      TIMESTAMP_TZ  NOT NULL,
    LOADED_AT       TIMESTAMP_TZ  NOT NULL DEFAULT CURRENT_TIMESTAMP()
);

-- 재실행 시 중복 삽입 방지
ALTER TABLE RAW_CRAWLED_PRICES ADD CONSTRAINT UQ_RAW_CRAWLED
    UNIQUE (SITE, CATEGORY, PRODUCT_NAME, CRAWLED_AT);


-- =====================================================
--  LAYER 2: STAGING — 정제/정규화
-- =====================================================
USE SCHEMA STAGING;

CREATE TABLE IF NOT EXISTS DIM_SITES (
    SITE_ID      NUMBER AUTOINCREMENT PRIMARY KEY,
    NAME         VARCHAR(50)  NOT NULL,
    DISPLAY_NAME VARCHAR(50),              -- 한글 표시명 (다나와, 컴퓨존, 견적왕)
    BASE_URL     VARCHAR(200) NOT NULL,
    CONSTRAINT UQ_DIM_SITES_NAME UNIQUE (NAME)
);

CREATE TABLE IF NOT EXISTS DIM_CATEGORIES (
    CATEGORY_ID NUMBER AUTOINCREMENT PRIMARY KEY,
    NAME        VARCHAR(50) NOT NULL,
    CONSTRAINT UQ_DIM_CATEGORIES_NAME UNIQUE (NAME)
);

CREATE TABLE IF NOT EXISTS STG_PRODUCTS (
    PRODUCT_ID   NUMBER AUTOINCREMENT PRIMARY KEY,
    SITE_ID      NUMBER       NOT NULL REFERENCES DIM_SITES(SITE_ID),
    CATEGORY_ID  NUMBER       NOT NULL REFERENCES DIM_CATEGORIES(CATEGORY_ID),
    NAME         VARCHAR(500) NOT NULL,
    BRAND        VARCHAR(100),
    MODEL_NUMBER VARCHAR(200),
    URL          VARCHAR(4000),
    CREATED_AT   TIMESTAMP_TZ NOT NULL DEFAULT CURRENT_TIMESTAMP(),
    UPDATED_AT   TIMESTAMP_TZ NOT NULL DEFAULT CURRENT_TIMESTAMP(),
    CONSTRAINT UQ_STG_PRODUCTS_SITE_NAME UNIQUE (SITE_ID, NAME)
);

CREATE TABLE IF NOT EXISTS STG_DAILY_PRICES (
    ID            NUMBER       AUTOINCREMENT PRIMARY KEY,
    PRODUCT_ID    NUMBER       NOT NULL REFERENCES STG_PRODUCTS(PRODUCT_ID),
    RAW_ID        NUMBER,      -- 원본 추적용 (FK 아님, raw 삭제 시에도 유지)
    PRICE         NUMBER       NOT NULL,   -- KRW 정수
    STOCK_STATUS  VARCHAR(20)  NOT NULL DEFAULT 'unknown',
    CRAWLED_AT    TIMESTAMP_TZ NOT NULL
);

CREATE TABLE IF NOT EXISTS STG_LATEST_PRICES (
    PRODUCT_ID    NUMBER       PRIMARY KEY REFERENCES STG_PRODUCTS(PRODUCT_ID),
    PRICE         NUMBER       NOT NULL,
    STOCK_STATUS  VARCHAR(20)  NOT NULL DEFAULT 'unknown',
    CRAWLED_AT    TIMESTAMP_TZ NOT NULL,
    UPDATED_AT    TIMESTAMP_TZ NOT NULL DEFAULT CURRENT_TIMESTAMP()
);

CREATE TABLE IF NOT EXISTS STG_ALERTS (
    ALERT_ID         NUMBER       AUTOINCREMENT PRIMARY KEY,
    PRODUCT_ID       NUMBER       NOT NULL REFERENCES STG_PRODUCTS(PRODUCT_ID),
    DAILY_PRICE_ID   NUMBER       REFERENCES STG_DAILY_PRICES(ID),
    ALERT_TYPE       VARCHAR(30)  NOT NULL,
    OLD_PRICE        NUMBER,
    NEW_PRICE        NUMBER       NOT NULL,
    CHANGE_PCT       NUMBER(8,4),
    CREATED_AT       TIMESTAMP_TZ NOT NULL DEFAULT CURRENT_TIMESTAMP(),
    IS_READ          BOOLEAN      NOT NULL DEFAULT FALSE
);


-- =====================================================
--  LAYER 3: ANALYTICS — 시각화/분석용 집계 테이블
-- =====================================================
USE SCHEMA ANALYTICS;

CREATE TABLE IF NOT EXISTS DAILY_SUMMARY (
    ID            NUMBER         AUTOINCREMENT PRIMARY KEY,
    PRODUCT_ID    NUMBER         NOT NULL,
    PRICE_DATE    DATE           NOT NULL,
    MIN_PRICE     NUMBER         NOT NULL,
    MAX_PRICE     NUMBER         NOT NULL,
    AVG_PRICE     NUMBER(12,2)   NOT NULL,
    RECORD_COUNT  NUMBER         NOT NULL,
    STOCK_STATUS  VARCHAR(20)    NOT NULL,
    CONSTRAINT UQ_DAILY_SUMMARY UNIQUE (PRODUCT_ID, PRICE_DATE)
);

CREATE TABLE IF NOT EXISTS WEEKLY_SUMMARY (
    ID            NUMBER         AUTOINCREMENT PRIMARY KEY,
    PRODUCT_ID    NUMBER         NOT NULL,
    WEEK_START    DATE           NOT NULL,
    MIN_PRICE     NUMBER         NOT NULL,
    MAX_PRICE     NUMBER         NOT NULL,
    AVG_PRICE     NUMBER(12,2)   NOT NULL,
    RECORD_COUNT  NUMBER         NOT NULL,
    CONSTRAINT UQ_WEEKLY_SUMMARY UNIQUE (PRODUCT_ID, WEEK_START)
);

CREATE TABLE IF NOT EXISTS PRODUCT_STATS (
    PRODUCT_ID    NUMBER         PRIMARY KEY,
    OVERALL_AVG   NUMBER(12,2)   NOT NULL,
    ALL_TIME_LOW  NUMBER         NOT NULL,
    ALL_TIME_HIGH NUMBER         NOT NULL,
    FIRST_SEEN    TIMESTAMP_TZ   NOT NULL,
    LAST_SEEN     TIMESTAMP_TZ   NOT NULL,
    TOTAL_RECORDS NUMBER         NOT NULL,
    UPDATED_AT    TIMESTAMP_TZ   NOT NULL DEFAULT CURRENT_TIMESTAMP()
);
